--- a/style/main.css
+++ b/style/main.css
@@ -1,10 +1,9 @@
-@import url(fonts/clear-sans.css);
 html, body {
   margin: 0;
   padding: 0;
   background: #faf8ef;
   color: #776e65;
-  font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Newsreader", serif;
   font-size: 18px; }
 
 body {
@@ -17,6 +16,7 @@ body {
 
 h1.title {
   font-size: 80px;
+  font-family: "Lobster", cursive;
   font-weight: bold;
   margin: 0;
   display: block;
@@ -229,6 +229,7 @@ hr {
   z-index: 2; }
 
 .tile, .tile .tile-inner {
+  font-family: "Lobster", cursive;
   width: 107px;
   height: 107px;
   line-height: 107px; }
@@ -329,17 +330,19 @@ hr {
     z-index: 10;
     font-size: 55px; }
   .tile.tile-2 .tile-inner {
-    background: #eee4da;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
+    background: url("https://cdn.pixabay.com/photo/2012/06/27/15/02/candy-50838__340.jpg");
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); 
+    color: white;}
   .tile.tile-4 .tile-inner {
-    background: #ede0c8;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
+    background: url("https://cdn.pixabay.com/photo/2016/09/18/20/25/candy-1678933__340.jpg");
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); 
+    color: White;}
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
-    background: #f2b179; }
+    background: url(https://cdn.pixabay.com/photo/2015/03/26/23/09/cake-pops-693645__340.jpg); }
   .tile.tile-16 .tile-inner {
     color: #f9f6f2;
-    background: #f59563; }
+    background: url(https://cdn.pixabay.com/photo/2017/01/04/19/41/candes-1952997__340.jpg); }
   .tile.tile-32 .tile-inner {
     color: #f9f6f2;
     background: #f67c5f; }
