--- a/style/main.css
+++ b/style/main.css
@@ -345,7 +345,7 @@ hr {
     background: url(https://cdn.pixabay.com/photo/2017/01/04/19/41/candes-1952997__340.jpg); }
   .tile.tile-32 .tile-inner {
     color: #f9f6f2;
-    background: #f67c5f; }
+    background: url(https://cdn.pixabay.com/photo/2016/08/24/21/33/gummybears-1618074__340.jpg); }
   .tile.tile-64 .tile-inner {
     color: #f9f6f2;
     background: #f65e3b; }
