--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,8 @@
+.testing {
+  width: 106.25px;
+  height: 106.25px;
+  background:url(https://cdn.pixabay.com/photo/2015/12/12/14/57/giant-rubber-bear-1089612_960_720.jpg);
+}
 html, body {
   margin: 0;
   padding: 0;
@@ -367,7 +372,7 @@ hr {
         font-size: 25px; } }
   .tile.tile-512 .tile-inner {
     color: #f9f6f2;
-    background: url(?);
+    background: url(https://cdn.pixabay.com/photo/2015/12/12/14/57/giant-rubber-bear-1089612_960_720.jpg);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
     font-size: 45px; }
     @media screen and (max-width: 520px) {
