--- a/style/main.css
+++ b/style/main.css
@@ -527,8 +527,9 @@ hr {
 
 .game-intro {
   float: left;
-  line-height: 42px;
-  margin-bottom: 0; }
+  margin-top:2% ;
+  line-height: auto;
+  margin-bottom: 0;}
 
 .restart-button {
   display: inline-block;
